RESOLVED FIXED305490
Crash in `RequestStorageAccess` completion handler
https://bugs.webkit.org/show_bug.cgi?id=305490
Summary Crash in `RequestStorageAccess` completion handler
Charlie Wolfe
Reported 2026-01-14 10:21:53 PST
...
Attachments
Charlie Wolfe
Comment 1 2026-01-14 10:21:54 PST
Charlie Wolfe
Comment 2 2026-01-14 10:22:28 PST
EWS
Comment 3 2026-01-14 11:04:05 PST
Committed 305591@main (9b53f59c437c): <https://commits.webkit.org/305591@main> Reviewed commits have been landed. Closing PR #56576 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.