Cherry-pick 9b53f59c437c. rdar://180447314

Crash in `RequestStorageAccess` completion handler
    https://bugs.webkit.org/show_bug.cgi?id=305490
    rdar://164582962

    Reviewed by Pascoe.

    * Source/WebKit/WebProcess/WebPage/WebPage.cpp:
    (WebKit::WebPage::requestStorageAccess):

    Canonical link: https://commits.webkit.org/305591@main

Identifier: 305413.1031@safari-7624.5-branch